[package]
name = "snapshot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
process = { version = "*", path = "../process" }
process_local = { version = "*", path = "../process_local" }
register = { version = "*", path = "../register" }
